[package]
name = "cargo-find"
version = "0.1.6"
authors = ["Maxim Lis <ralvke@gmail.com>"]
description = "Find crates from command line"
license = "MIT"
repository = "https://github.com/Ralvke/cargo-find"

[dependencies]
termion = "1.3.0"
hyper = "0.10.10"
hyper-native-tls = "0.2.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
time = "0.1.37"
